--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 #IMPORTANT STUFF
-.idea/*
+.idea/
 
 # User-specific stuff:
 .idea/**/workspace.xml
